# pybind11-project

./: .gitignore  CLAUDE.md  PROGRESS.md  QUICKSTART.md  README.md  main.py  pybind11_8week_curriculum.md  pyproject.toml  requirements.txt
docs/: README.md
examples/: README.md
src/: README.md
tests/: README.md
week1/: README.md
week1/day1/: README.md  example.cpp  setup.py
week1/day2/: README.md  example.cpp  setup.py
week1/day3/: README.md
week1/day4/: README.md
week1/day5/: README.md
week2/: README.md
week2/day1/: README.md
week2/day2/: README.md
week2/day3/: README.md
week2/day4/: README.md
week2/day5/: README.md
week3/: README.md
week3/day1/: README.md
week3/day2/: README.md
week3/day3/: README.md
week3/day4/: README.md
week3/day5/: README.md
week4/: README.md
week4/day1/: README.md
week4/day2/: README.md
week4/day3/: README.md
week4/day4/: README.md
week4/day5/: README.md
week5/: README.md
week5/day1/: README.md
week5/day2/: README.md
week5/day3/: README.md
week5/day4/: README.md
week5/day5/: README.md
week6/: README.md
week6/day1/: README.md
week6/day2/: README.md
week6/day3/: README.md
week6/day4/: README.md
week6/day5/: README.md
week7/: README.md
week7/day1/: README.md
week7/day2/: README.md
week7/day3/: README.md
week7/day4/: README.md
week7/day5/: README.md
week8/: README.md
week8/day1/: README.md
week8/day2/: README.md
week8/day3/: README.md
week8/day4/: README.md
week8/day5/: README.md
